[project]
name = "my-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython>=9.4.0",
    "kokoro>=0.9.4",
    "matplotlib>=3.10.3",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "soundfile>=0.13.1",
    "streamlit>=1.47.0",
    "streamlit-advanced-audio>=0.1.2",
    "torch>=2.7.1",
]
